Ensure text is visible

--- a/src/Umbraco.Web.UI.Client/src/views/propertyeditors/blocklist/prevalue/blocklist.blockconfiguration.overlay.less
+++ b/src/Umbraco.Web.UI.Client/src/views/propertyeditors/blocklist/prevalue/blocklist.blockconfiguration.overlay.less
@@ -9,13 +9,14 @@
         position: absolute;
         display: flex;
         align-items: center;
-        top:0;
+        top: 0;
         bottom: 0;
         right: 0;
         background-color: rgba(255, 255, 255, 0.8);
         opacity: 0;
         transition: opacity 120ms;
     }
+
     .control-group:hover,
     .control-group:focus,
     .control-group:focus-within {
@@ -23,19 +24,22 @@
             opacity: 1;
         }
     }
+
     .__control-actions-btn {
         position: relative;
         color: @ui-action-discreet-type;
         height: 32px;
         width: 26px;
+
         &:hover {
             color: @ui-action-discreet-type-hover;
         }
+
         &:last-of-type {
             margin-right: 7px;
         }
     }
-    
+
     .umb-node-preview {
         border-bottom: none;
     }
@@ -64,8 +68,8 @@
         &.--noValue {
             text-align: center;
             border-radius: @baseBorderRadius;
-            color: white;
             transition: color 120ms;
+
             &:hover, &:focus {
                 color: @ui-action-discreet-type-hover;
                 border-color: @ui-action-discreet-border-hover;
@@ -79,7 +83,7 @@
     }
 
     .__add-button {
-        width:100%;
+        width: 100%;
         color: @ui-action-discreet-type;
         border: 1px dashed @ui-action-discreet-border;
         border-radius: @baseBorderRadius;
@@ -91,10 +95,9 @@
         margin: 20px 0;
         font-weight: bold;
     }
-    
+
     .__add-button:hover {
         color: @ui-action-discreet-type-hover;
         border-color: @ui-action-discreet-border-hover;
     }
-
 }
